// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiForm is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiForm renders a form element 1`] = `
<form
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--primary euiCallOut euiForm__errors emotion-euiPanel-none-primary-euiCallOut-primary"
    data-size="m"
    data-type="neutral"
    role="alert"
    style="--euiCallOutTypeColor: #0B64DD;"
    tabindex="-1"
  >
    <div
      class="css-tc1q32-wrapper"
    >
      <div
        class="css-wlziyu-body"
      >
        <span
          class="css-19b7t2f-icon"
          data-euiicon-type="info"
        />
        <div
          class="css-qvenhi-content"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
          >
            Please address the highlighted errors.
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
</div>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" and has multiple errors 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--primary euiCallOut euiForm__errors emotion-euiPanel-none-primary-euiCallOut-primary"
    data-size="m"
    data-type="neutral"
    role="alert"
    style="--euiCallOutTypeColor: #0B64DD;"
    tabindex="-1"
  >
    <div
      class="css-tc1q32-wrapper"
    >
      <div
        class="css-wlziyu-body"
      >
        <span
          class="css-19b7t2f-icon"
          data-euiicon-type="info"
        />
        <div
          class="css-qvenhi-content"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
          >
            Please address the highlighted errors.
          </p>
          <div
            class="euiText euiCallOut__text emotion-euiText-s-euiTextColor-default"
          >
            <ul>
              <li
                class="euiForm__error"
              >
                <span>
                  This is one error
                </span>
              </li>
              <li
                class="euiForm__error"
              >
                <span>
                  This is another error
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
</div>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" and has one error 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--primary euiCallOut euiForm__errors emotion-euiPanel-none-primary-euiCallOut-primary"
    data-size="m"
    data-type="neutral"
    role="alert"
    style="--euiCallOutTypeColor: #0B64DD;"
    tabindex="-1"
  >
    <div
      class="css-tc1q32-wrapper"
    >
      <div
        class="css-wlziyu-body"
      >
        <span
          class="css-19b7t2f-icon"
          data-euiicon-type="info"
        />
        <div
          class="css-qvenhi-content"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
          >
            Please address the highlighted errors.
          </p>
          <div
            class="euiText euiCallOut__text emotion-euiText-s-euiTextColor-default"
          >
            <ul>
              <li
                class="euiForm__error"
              >
                <span>
                  This is one error
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
</div>
`;

exports[`EuiForm renders without error callout when invalidCallout is "none" 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;
